# UPM-SBLD-25

./: LICENSE.md  README.md  assignment-2025-10-31.ipynb  class-2025-10-31-a.ipynb  class-2025-10-31-b.ipynb  class1.collection.smi  pyproject.toml
