[project]
name = "sbld25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "rdkit>=2025.9.1",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "plotly>=6.3.1",
    "duckdb>=1.4.1",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
